<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">AVATAR Main Menu</string>
    <string name="app_name">AVATAR</string>
    <string name="play_recording">Play Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="return_to_form">Return to Form</string>
    <string name="item_separator">_***_</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_mail_activity">MailActivity</string>
    <string name="title_mail_sender_activity">MailSenderActivity</string>
    <string name="et_subject">Subject</string>
    <string name="et_body">Email Body</string>
    <string name="et_addl_address">Additional Email Addresses</string>
    <string name="thank_submission">Thank you for your submission.</string>
    <string name="send_failed">Send failed. Please try again.</string>
    <string name="send">Send</string>
    <string name="type_picture">Photo</string>
    <string name="type_video">Video</string>
    <string name="type_audio">Audio</string>
    <string name="type_comment">Comment</string>
    <string name="type_android">Android</string>
    <string name="enterDeviceId">Enter Device Name</string>
    <string name="name">Name</string>
    <string name="sendEmail">  Send Email  </string>
    <string name="nameOfLoc">Name of Location or Item of Interest</string>
    <string name="urlOf">The URL of uploaded media</string>
    <string name="urlWillBeHere">The URL will be displayed hsere</string>
    <string name="description">Description</string>
    <string name="textDescr">Text Description</string>
    <string name="start">  Press to upload information  </string>
    <string name="pic">Take a Picture</string>
    <string name="uploadPic">Upload Photo</string>
    <string name="back">  Return to main screen  </string>
    <string name="uploadMenu">Choose the media you wish to share</string>
    <string name="gps">        Send GPS Location        </string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="upload">Upload</string>
    <string name="FindPosition">Find Position</string>
    <string name="find_position">Find Position</string>
    <string name="Exit">Exit</string>
    <string name="Clear_Points_Button">Clear Points</string>
    <string name="video_button_description">Record a video to upload.</string>
    <string name="camera_button_description">Take a picture to upload.</string>
    <string name="microphone_button_description">Record audio to upload.</string>
    <string name="comment_button_description">Write a comment to upload.</string>
    <string name="cancel_button_description">Cancel the upload process.</string>
    <string name="Augmented_Reality_View_Button">Augmented Reality View</string>
    <string name="Augmented_Reality_View_Point">Augmented Reality Point</string>
    <string name="type_emergency">Emergency Call</string>
    <string name="do_more">Do more with these points?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_google_maps_viewer">GoogleMapsViewer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    

     <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="sensor_prompt">Choose a Sensor</string>
    <string name="time_prompt">Choose a Time</string>

    <string-array name="listArray">
        <item>&quot;1 minute&quot;</item>
        <item>&quot;10 minutes&quot;</item>
        <item>&quot;1 hour&quot;</item>
    </string-array>
    <string-array name="listValues">
        <item>60000</item>
        <item>600000</item>
        <item>36000000</item>
    </string-array>

    <string name="thermometer">@layout/sensor_page_thermometer</string>
    <string name="co2">@layout/sensor_page_wind</string>
    <string name="legendt">Legend</string>

    <color name="background">#272727</color>

    <string name="sensorfilter">Choose Sensors:</string>
    <string name="sensor1">Temperature </string>
    <string name="sensor2">Sensor 2 </string>
    <string name="sensor3">Luminosity </string>
    <string name="sensor4">Methane </string>
    <string name="sensor5">Barometric Pressure </string>
    <string name="sensor6">Carbon Monoxide </string>
    <string name="sensor7">Carbon Dioxide </string>
    <string name="sensor8">Humidity</string>
    <string name="sensor9">Radiation</string>
    <string name="sensorlast">Images</string>
    <string name="sensorall">All Sensors</string>

    <string-array name="databaseinfo">
        <item>&quot;wbi-icc.com&quot;</item>
        <item>&quot;p26t2to0_Student&quot;</item>
        <item>&quot;Summer2012&quot;</item>
        <item>&quot;p26t2to0_Student&quot;</item>
    </string-array>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="stream">Stream</string>
    <string name="wind_on">Read Wind</string>
    <string name="wind_off">Stop Wind</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string-array name="sensor_list">
        <item>Select Sensor</item>
        <item>Thermometer</item>
        <item>Luminosity</item>
        <item>Wind</item>
        <item>Barometric Pressure</item>
        <item>Humidity</item>
        <item>Radiation</item>
        <item>Carbon Monoxide</item>
        <item>Carbon Dioxide</item>
        <item>Methane</item>
        <item>Propane</item>
        <item>Alcohol Gas</item>
        <item>IR Thermometer</item>
        <item>Infared Break Beam</item>
        <item>Motion</item>
        <item>Ultrasonic</item>
        <item>Heart Beat</item>
        <item>Temperature (BP Sensor)</item>
        <item>Stop</item>
    </string-array>
    
     <string-array name="time_list">
        <item>(Default) 1 Second</item>
        <item>5 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>0.5 Seconds</item>
    </string-array>

    
     <!--  GUARDIAN ANGEL STRINGS -->
     
    <string name="cardinal_north">N</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_west">W</string>
    <string name="start">START</string>
    <string name="back">BACK</string>
    <string name="stop">STOP</string>
    <string name="done">DONE</string>
    <string name="volume">Volume:</string>
    <string name="size">Size:</string>
    <string name="hint">Type answer here</string>
    <color name="navy">#000080</color>
     
    </resources>