<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/darker_gray">

    <ImageView
          android:layout_width="fill_parent"
          android:layout_height="0px"
          android:layout_weight=".5"
          android:src="@drawable/ic_launcher" />
     <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/do_more"
          android:textSize= "35dp" />
      <Button
          android:id="@+id/yes_button"
          android:layout_width="fill_parent"
          android:layout_height="0px"
          android:layout_weight=".5"
          android:layout_gravity="center"
          android:text="@string/yes"
          android:textSize="35dp" />
      <Button
          android:id="@+id/no_button"
          android:layout_width="fill_parent"
          android:layout_height="0px"
          android:layout_weight=".5"          
          android:layout_gravity="center"
          android:text="@string/no"
          android:textSize="35dp" />
      <ImageView
          android:layout_width="fill_parent"
          android:layout_height="0px"
          android:layout_weight=".5"/>

</LinearLayout>